@@ -19,7 +19,14 @@
 		<div id='lastUpdated' class='status'><span class='static'>Last updated:</span><span id='lastUpdate' class='dynamic'>Mon Mar 18 11:11:12 PDT 2013</span></div>
 	</div>
 
-	<div id='controllers'></div>
+	<div id='onos'>
+		<div id='controllers'></div>
+		<div id='actions'>
+			<div id='action-all' class='action'>ALL</div>
+			<div id='action-local' class='action'>LOCAL</div>
+			<div id='action-scale' class='action'>SCALE</div>
+		</div>
+	</div>
 
 	<div id='topologyArea'>
 		<div id='svg-container'></div>
